# xboxlive-protect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  profile-submission.md
.github/workflows/: ci.yml
deploy/: install-stage1.sh  install.sh
deploy/network/: README.md  apply-bridge.sh  br0.conf  bring-up-bridge.sh  confirm-bridge.sh  modules-br_netfilter.conf  rollback-bridge.sh  sysctl-bridge.conf  xblp-bridge-rollback.service
deploy/nftables/: xblp.nft.template
deploy/nginx/: xblp.conf
deploy/systemd/: xblp-api.service  xblp-capture.service
deploy/systemd/nginx.service.d/: xblp.conf
docs/: api-auth.md  api-peers.md  api-rules.md  api-status.md  development.md  troubleshooting.md  ui-development.md
profiles/: generic-p2p.yaml  halo-reach-x360.yaml  halo3-x360.yaml  monitoring-only.yaml  mw2-x360.yaml
src/xblp_api/: __init__.py  __main__.py  app.py  config.py  main.py  middleware.py  tls.py
src/xblp_api/auth/: __init__.py  dependencies.py  hashing.py  sessions.py
src/xblp_capture/: __init__.py  __main__.py  events.py  persistence.py  scorer.py  sniffer.py
src/xblp_common/: __init__.py  db.py  migrations.py  models.py  nft.py  profiles.py  reconcile.py  schemas.py  validation.py
src/xblp_updater/: __init__.py
tests/: conftest.py
tests/integration/: test_api_startup.py  test_bridge.py  test_nft_integration.py  test_peers_integration.py  test_reconcile_integration.py  test_rules_integration.py  test_sniffer_integration.py  test_tls_integration.py
tests/unit/: test_auth_hashing.py  test_auth_routes.py  test_auth_sessions.py  test_data_layer.py  test_db_dir.py  test_nft.py  test_peers_routes.py  test_persistence.py  test_profiles.py  test_reconcile.py  test_rules_routes.py  test_rules_validation.py  test_scorer.py  test_startup_probe.py  test_status_route.py  test_tls.py  test_ui_static.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+24 files in other folders)
