[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xboxlive-protect"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/xblp_api",
    "src/xblp_capture",
    "src/xblp_common",
    "src/xblp_updater",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length — ruff format handles this
]

[tool.ruff.lint.isort]
known-first-party = ["xblp_api", "xblp_capture", "xblp_common", "xblp_updater"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]   # allow non-PEP-8 test/fixture names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m unit"
markers = [
    "unit: fast, no external dependencies",
    "integration: require Linux, root, and the nft binary (run with: pytest -m integration)",
    "linux: tests that only run on Linux",
]
